--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <p>Seleccione su arma 🔫:</p>
         <section class="contenedorImagenes">
             <button class="imagenes" onclick="piedra()">
-                <img src="./imagenes ppt/ppt.png" alt="Piedra">
+                <img src="media/ppt.png" alt="Piedra">
             </button>
             <button class="imagenes" onclick="papel()">
-                <img src="./imagenes ppt/ppt2.png" alt="Papel">
+                <img src="media/ppt2.png" alt="Papel">
             </button>
             <button class="imagenes" onclick="tijera()">
-                <img src="./imagenes ppt/ppt3.png" alt="Tijeras">
+                <img src="media/ppt3.png" alt="Tijeras">
             </button>
         </section>
     </div>
